print example outputs in bootstrap notebook.

--- a/tests/test_bootstrap.ipynb
+++ b/tests/test_bootstrap.ipynb
@@ -337,94 +337,20 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>mutation</th>\n",
-       "      <th>epitope</th>\n",
-       "      <th>site</th>\n",
-       "      <th>wildtype</th>\n",
-       "      <th>mean</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>M1C</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>C</td>\n",
-       "      <td>0.358518</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>G2A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>A</td>\n",
-       "      <td>0.775751</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>A4K</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>K</td>\n",
-       "      <td>2.240459</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>A4L</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>L</td>\n",
-       "      <td>1.666676</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>M1C</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>C</td>\n",
-       "      <td>1.560371</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  mutation epitope  site wildtype      mean\n",
-       "0      M1C       1     1        C  0.358518\n",
-       "1      G2A       1     2        A  0.775751\n",
-       "2      A4K       1     4        K  2.240459\n",
-       "3      A4L       1     4        L  1.666676\n",
-       "4      M1C       2     1        C  1.560371"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  mutation epitope  site wildtype      mean\n",
+      "0      M1C       1     1        C  0.357534\n",
+      "1      G2A       1     2        A  0.776736\n",
+      "2      A4K       1     4        K  2.240609\n",
+      "3      A4L       1     4        L  1.666600\n",
+      "4      M1C       2     1        C  1.560271\n"
+     ]
     }
    ],
    "source": [
-    "summary_mut_escape_dict[\"mean\"].head()"
+    "print(summary_mut_escape_dict[\"mean\"].head())"
    ]
   },
   {
@@ -434,94 +360,20 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>mutation</th>\n",
-       "      <th>epitope</th>\n",
-       "      <th>site</th>\n",
-       "      <th>wildtype</th>\n",
-       "      <th>std</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>M1C</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>C</td>\n",
-       "      <td>0.612217</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>G2A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1.065536</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>A4K</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>K</td>\n",
-       "      <td>0.318937</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>A4L</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>L</td>\n",
-       "      <td>0.469403</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>M1C</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>C</td>\n",
-       "      <td>0.855038</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  mutation epitope  site wildtype       std\n",
-       "0      M1C       1     1        C  0.612217\n",
-       "1      G2A       1     2        A  1.065536\n",
-       "2      A4K       1     4        K  0.318937\n",
-       "3      A4L       1     4        L  0.469403\n",
-       "4      M1C       2     1        C  0.855038"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  mutation epitope  site wildtype       std\n",
+      "0      M1C       1     1        C  0.612951\n",
+      "1      G2A       1     2        A  1.066903\n",
+      "2      A4K       1     4        K  0.318816\n",
+      "3      A4L       1     4        L  0.468816\n",
+      "4      M1C       2     1        C  0.855098\n"
+     ]
     }
    ],
    "source": [
-    "summary_mut_escape_dict[\"std\"].head()"
+    "print(summary_mut_escape_dict[\"std\"].head())"
    ]
   },
   {
@@ -531,58 +383,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>epitope</th>\n",
-       "      <th>median</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1.070803</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1.901485</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  epitope    median\n",
-       "0       1  1.070803\n",
-       "1       2  1.901485"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  epitope    median\n",
+      "0       1  1.071114\n",
+      "1       2  1.903490\n"
+     ]
     }
    ],
    "source": [
-    "summary_activity_wt_dict[\"median\"]"
+    "print(summary_activity_wt_dict[\"median\"])"
    ]
   }
  ],
