--- a/tests/test_bootstrap.ipynb
+++ b/tests/test_bootstrap.ipynb
@@ -226,9 +226,20 @@
     "# Test to ensure that parameters change during fitting.\n",
     "for model in pc.models:\n",
     "    old_params = model._params\n",
-    "    boot._fit_polyclonal_model(model)\n",
+    "    boot._fit_polyclonal_model_static(model, fit_site_level_first=False)\n",
     "    # Did the params change?\n",
     "    assert not np.array_equal(model._params, old_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "191a9185-f1d3-4271-8116-fd0a47b788ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test `fit_models()` with kwargs -- shouldn't throw any errors\n",
+    "pc_copy.fit_models(fit_site_level_first=False)"
    ]
   },
   {
@@ -241,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "7ec43240-d74a-49d8-97e4-1e45e45923df",
    "metadata": {},
    "outputs": [],
@@ -257,13 +268,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "55c4be49-be98-425b-877f-8ae37153f8fd",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Aggregate the results\n",
-    "agg_results = pc._summarize_bootstraped_predictions(test_list)\n",
+    "agg_results = pc.summarize_bootstraped_predictions(test_list)\n",
     "assert len(test_list[0]) != len(agg_results)"
    ]
   },
@@ -287,12 +298,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "52fdcd43-655e-4fee-8de2-4996e3ba8307",
    "metadata": {},
    "outputs": [],
    "source": [
-    "summary_mut_escape_dict, summary_activity_wt_dict = pc._summarize_bootstrapped_params()\n",
+    "summary_mut_escape_dict, summary_activity_wt_dict = pc.summarize_bootstrapped_params()\n",
     "stat_colnames = set([\"mean\", \"median\", \"std\"])\n",
     "\n",
     "# Basic tests to make sure summary stats are being recorded.\n",
@@ -312,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "7d7aa1b9-8d47-4c27-bb9d-f72c109580e6",
    "metadata": {},
    "outputs": [],
