enforcing epitope naming scheme to debug eHarmony (no chars for now)

--- a/tests/test_bootstrap.ipynb
+++ b/tests/test_bootstrap.ipynb
@@ -47,12 +47,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "activity_wt_df = pd.DataFrame({\"epitope\": [\"e1\", \"e2\"], \"activity\": [2.0, 1.0]})\n",
+    "activity_wt_df = pd.DataFrame({\"epitope\": [\"1\", \"2\"], \"activity\": [2.0, 1.0]})\n",
     "\n",
     "mut_escape_df = pd.DataFrame(\n",
     "    {\n",
     "        \"mutation\": [\"M1C\", \"M1C\", \"G2A\", \"G2A\", \"A4K\", \"A4K\", \"A4L\", \"A4L\"],\n",
-    "        \"epitope\": [\"e1\", \"e2\", \"e1\", \"e2\", \"e1\", \"e2\", \"e1\", \"e2\"],\n",
+    "        \"epitope\": [\"1\", \"2\", \"1\", \"2\", \"1\", \"2\", \"1\", \"2\"],\n",
     "        \"escape\": [2.0, 0.0, 3.0, 0.0, 0.0, 2.5, 0.0, 1.5],\n",
     "    }\n",
     ")\n",
@@ -87,7 +87,7 @@
     "    data_to_fit=data_to_fit,\n",
     "    activity_wt_df=activity_wt_df,\n",
     "    site_escape_df=pd.DataFrame.from_records(\n",
-    "        [(\"e1\", 1, 1.0), (\"e1\", 4, 0.0), (\"e2\", 1, 0.0), (\"e2\", 4, 2.0)],\n",
+    "        [(\"1\", 1, 1.0), (\"1\", 4, 0.0), (\"2\", 1, 0.0), (\"2\", 4, 2.0)],\n",
     "        columns=[\"epitope\", \"site\", \"escape\"],\n",
     "    ),\n",
     "    data_mut_escape_overlap=\"fill_to_data\",\n",
@@ -98,7 +98,7 @@
     "    data_to_fit=data_to_fit.head(30),\n",
     "    activity_wt_df=activity_wt_df,\n",
     "    site_escape_df=pd.DataFrame.from_records(\n",
-    "        [(\"e1\", 1, 1.0), (\"e1\", 4, 0.0), (\"e2\", 1, 0.0), (\"e2\", 4, 2.0)],\n",
+    "        [(\"1\", 1, 1.0), (\"1\", 4, 0.0), (\"2\", 1, 0.0), (\"2\", 4, 2.0)],\n",
     "        columns=[\"epitope\", \"site\", \"escape\"],\n",
     "    ),\n",
     "    data_mut_escape_overlap=\"fill_to_data\",\n",
@@ -243,6 +243,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "18c2f672-bdd1-4a92-8e6a-c420c57f0d3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pc_copy.harmonize_epitopes()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "67a3aefe-bb46-4853-9fd2-7cc9e8827260",
    "metadata": {},
@@ -252,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "7ec43240-d74a-49d8-97e4-1e45e45923df",
    "metadata": {},
    "outputs": [],
@@ -268,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "55c4be49-be98-425b-877f-8ae37153f8fd",
    "metadata": {},
    "outputs": [],
@@ -298,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "52fdcd43-655e-4fee-8de2-4996e3ba8307",
    "metadata": {},
    "outputs": [],
@@ -323,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "7d7aa1b9-8d47-4c27-bb9d-f72c109580e6",
    "metadata": {},
    "outputs": [],
