--- a/tests/test_rbd_bootstrap.ipynb
+++ b/tests/test_rbd_bootstrap.ipynb
@@ -174,55 +174,55 @@
      "output_type": "stream",
      "text": [
       "# First fitting site-level model.\n",
-      "# Starting optimization of 522 parameters at Thu Feb 24 11:00:01 2022.\n",
+      "# Starting optimization of 522 parameters at Thu Mar 10 08:49:25 2022.\n",
       "       step   time_sec       loss   fit_loss reg_escape  regspread\n",
-      "          0   0.052244     9144.4     9144.2    0.29701          0\n",
-      "        100     6.8986     1336.8     1333.2     3.5443          0\n",
-      "        200     13.906     1313.2     1308.8     4.3872          0\n",
-      "        300      21.41       1305     1299.8     5.1347          0\n",
-      "        400     28.214     1301.8     1296.2     5.6246          0\n",
-      "        500     34.967     1298.4     1292.5     5.8941          0\n",
-      "        600      41.68     1297.8     1291.7     6.0372          0\n",
-      "        700     48.761     1296.9     1290.4     6.5236          0\n",
-      "        800     55.565     1296.4     1289.8     6.6654          0\n",
-      "        900     62.327     1296.2     1289.4      6.759          0\n",
-      "       1000     69.127     1295.7     1288.8     6.8687          0\n",
-      "       1100     76.115     1295.4     1288.6      6.848          0\n",
-      "       1200     82.921     1295.1     1288.2     6.8787          0\n",
-      "       1300     89.777       1295     1288.1     6.8933          0\n",
-      "       1327     91.509       1295     1288.1     6.9079          0\n",
-      "# Successfully finished at Thu Feb 24 11:01:32 2022.\n",
-      "# Starting optimization of 5799 parameters at Thu Feb 24 11:01:33 2022.\n",
+      "          0   0.050539     9144.4     9144.2    0.29701          0\n",
+      "        100     5.9702     1336.8     1333.2     3.5443          0\n",
+      "        200     11.747     1313.2     1308.8     4.3872          0\n",
+      "        300     17.976       1305     1299.8     5.1347          0\n",
+      "        400     23.684     1301.8     1296.2     5.6246          0\n",
+      "        500      29.48     1298.4     1292.5     5.8941          0\n",
+      "        600      35.17     1297.8     1291.7     6.0372          0\n",
+      "        700     41.239     1296.9     1290.4     6.5236          0\n",
+      "        800     47.064     1296.4     1289.8     6.6654          0\n",
+      "        900     52.893     1296.2     1289.4      6.759          0\n",
+      "       1000     58.731     1295.7     1288.8     6.8687          0\n",
+      "       1100     64.708     1295.4     1288.6      6.848          0\n",
+      "       1200     70.525     1295.1     1288.2     6.8787          0\n",
+      "       1300     76.409       1295     1288.1     6.8933          0\n",
+      "       1327     77.902       1295     1288.1     6.9079          0\n",
+      "# Successfully finished at Thu Mar 10 08:50:43 2022.\n",
+      "# Starting optimization of 5799 parameters at Thu Mar 10 08:50:43 2022.\n",
       "       step   time_sec       loss   fit_loss reg_escape  regspread\n",
-      "          0   0.073138     1638.9     1552.6     86.331 2.0049e-29\n",
-      "        100     8.5747      840.1     742.48     86.054     11.569\n",
-      "        200     17.448        823      722.8     84.969     15.233\n",
-      "        300     26.197     814.93     715.01     81.327     18.598\n",
-      "        400     34.618     808.61     713.03     77.361     18.217\n",
-      "        500     43.088     797.44     707.43     71.416     18.591\n",
-      "        600     51.531      787.5      704.1     63.484     19.917\n",
-      "        700     60.194     779.41     701.56     57.656     20.192\n",
-      "        800      68.66     773.29     700.96     52.552     19.778\n",
-      "        900     76.896     767.01     698.89     47.897     20.223\n",
-      "       1000     84.959     763.29     697.22     45.818     20.245\n",
-      "       1100     93.586     757.65      693.1     43.495     21.052\n",
-      "       1200     102.91     752.35     687.89     42.401     22.058\n",
-      "       1300     112.19     746.77     680.45     42.599     23.722\n",
-      "       1400     120.92     741.09     673.02     43.167      24.91\n",
-      "       1500     129.44     735.39      664.1     44.328      26.96\n",
-      "       1600     138.13     728.43        654     45.503     28.927\n",
-      "       1700     146.44     723.22     645.61     46.896     30.714\n",
-      "       1800     154.71     713.76     632.49     48.549     32.715\n",
-      "       1900     162.95     696.67     611.33     50.353     34.985\n",
-      "       2000     171.19     681.55     596.14     50.859     34.555\n",
-      "       2100     179.52     670.83     583.91     51.702     35.218\n",
-      "       2200     187.77     666.81     579.38     52.268     35.168\n",
-      "       2300     195.83      665.7     578.31     52.536     34.853\n",
-      "       2400     204.23     665.33     577.91     52.736     34.683\n",
-      "       2500     212.29     665.16     577.76     52.881     34.528\n",
-      "       2600     220.31     665.08     577.66      52.95     34.467\n",
-      "       2634     223.42     665.06     577.64     52.976     34.452\n",
-      "# Successfully finished at Thu Feb 24 11:05:16 2022.\n"
+      "          0   0.068505     1638.9     1552.6     86.331 2.0049e-29\n",
+      "        100     7.3493      840.1     742.48     86.054     11.569\n",
+      "        200     15.012        823      722.8     84.969     15.233\n",
+      "        300     22.432     814.93     715.01     81.327     18.598\n",
+      "        400     29.684     808.61     713.03     77.361     18.217\n",
+      "        500     36.933     797.44     707.43     71.416     18.591\n",
+      "        600     44.216      787.5      704.1     63.484     19.917\n",
+      "        700     51.607     779.41     701.56     57.656     20.192\n",
+      "        800     58.876     773.29     700.96     52.552     19.778\n",
+      "        900     65.958     767.01     698.89     47.897     20.223\n",
+      "       1000     72.723     763.29     697.22     45.818     20.245\n",
+      "       1100     80.085     757.65      693.1     43.495     21.052\n",
+      "       1200     87.644     752.35     687.89     42.401     22.058\n",
+      "       1300     95.045     746.77     680.45     42.599     23.722\n",
+      "       1400     102.52     741.09     673.02     43.167      24.91\n",
+      "       1500      109.8     735.39      664.1     44.328      26.96\n",
+      "       1600     117.24     728.43        654     45.503     28.927\n",
+      "       1700     124.39     723.22     645.61     46.896     30.714\n",
+      "       1800     131.63     713.76     632.49     48.549     32.715\n",
+      "       1900     138.73     696.67     611.33     50.353     34.985\n",
+      "       2000     145.87     681.55     596.14     50.859     34.555\n",
+      "       2100     153.09     670.83     583.91     51.702     35.218\n",
+      "       2200     160.29     666.81     579.38     52.268     35.168\n",
+      "       2300     167.28      665.7     578.31     52.536     34.853\n",
+      "       2400     174.65     665.33     577.91     52.736     34.683\n",
+      "       2500     181.65     665.16     577.76     52.881     34.528\n",
+      "       2600     188.63     665.08     577.66      52.95     34.467\n",
+      "       2634     191.16     665.06     577.64     52.976     34.452\n",
+      "# Successfully finished at Thu Mar 10 08:53:54 2022.\n"
      ]
     }
    ],
@@ -270,8 +270,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rbd_pc_a.fit_models()\n",
-    "rbd_pc_b.fit_models()"
+    "rbd_pc_a.fit_models(fit_site_level_first=False)\n",
+    "rbd_pc_b.fit_models(fit_site_level_first=False)"
    ]
   },
   {
@@ -285,26 +285,80 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2a301764-d7bb-4df4-8d32-17edc3087cdd",
+   "id": "3dc642de-0a87-4303-9f0b-de5364da1534",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The test for the mutation frequency dictionary isn't suitable here\n",
-    "# With so many multi-variants, we may not get situations where a mutation isn't sampled by all models\n",
-    "# For our seed tests, I will just make sure we get different summary stats for each seed.\n",
-    "(\n",
-    "    rbd_pc_a_escape_dict,\n",
-    "    rbd_pc_a_activity_wt_dict,\n",
-    ") = rbd_pc_a._summarize_bootstrapped_params()\n",
-    "(\n",
-    "    rbd_pc_b_escape_dict,\n",
-    "    rbd_pc_b_activity_wt_dict,\n",
-    ") = rbd_pc_b._summarize_bootstrapped_params()"
+    "rbd_pc_a_copy = PolyclonalCollection(\n",
+    "    root_polyclonal=rbd_poly,\n",
+    "    n_bootstrap_samples=n_samps,\n",
+    "    n_threads=n_threads,\n",
+    "    seed=0,\n",
+    ")\n",
+    "rbd_pc_a_copy.fit_models(fit_site_level_first=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1d21a13-1718-44c4-92a2-f75a476d4b24",
+   "metadata": {},
+   "source": [
+    "The test for mutation frequency in the mutation frequency dictionary is not suitable here.\n",
+    "With so many multi-variants, we may not come across situations where a mutation isn't sampled by at least one model.\n",
+    "For our seed tests, I will just make sure we get different summary stats for each seed."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "2a301764-d7bb-4df4-8d32-17edc3087cdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    rbd_pc_a_escape_dict,\n",
+    "    rbd_pc_a_activity_wt_dict,\n",
+    ") = rbd_pc_a.summarize_bootstrapped_params()\n",
+    "(\n",
+    "    rbd_pc_b_escape_dict,\n",
+    "    rbd_pc_b_activity_wt_dict,\n",
+    ") = rbd_pc_b.summarize_bootstrapped_params()\n",
+    "(\n",
+    "    rbd_pc_a_copy_escape_dict,\n",
+    "    rbd_pc_a_copy_activity_wt_dict,\n",
+    ") = rbd_pc_a_copy.summarize_bootstrapped_params()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9b360b1f-1498-4c87-bfbf-89f135254da1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test to see if inferreed params are the same with the same seed.\n",
+    "assert rbd_pc_a_escape_dict[\"mean\"].equals(rbd_pc_a_copy_escape_dict[\"mean\"])\n",
+    "assert rbd_pc_a_escape_dict[\"median\"].equals(rbd_pc_a_copy_escape_dict[\"median\"])\n",
+    "assert rbd_pc_a_escape_dict[\"std\"].equals(rbd_pc_a_copy_escape_dict[\"std\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9570b418-aedb-411a-86c6-7ff84767c1dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert rbd_pc_a_activity_wt_dict[\"mean\"].equals(rbd_pc_a_copy_activity_wt_dict[\"mean\"])\n",
+    "assert rbd_pc_a_activity_wt_dict[\"median\"].equals(\n",
+    "    rbd_pc_a_copy_activity_wt_dict[\"median\"]\n",
+    ")\n",
+    "assert rbd_pc_a_activity_wt_dict[\"std\"].equals(rbd_pc_a_copy_activity_wt_dict[\"std\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "579172d6-1be5-4b31-9e22-66b886edebe2",
    "metadata": {},
    "outputs": [],
@@ -317,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "80424a67-9557-4335-ba3a-0de1337b2f0f",
    "metadata": {},
    "outputs": [],
@@ -331,19 +385,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "a478c4e3-568e-4fe7-9768-c9762b1da9bb",
    "metadata": {},
    "outputs": [],
    "source": [
     "test_df = rbd_data.sample(n=200, random_state=0)\n",
     "pc_a_preds = pd.concat(rbd_pc_a.make_predictions(test_df))\n",
-    "pc_b_preds = pd.concat(rbd_pc_b.make_predictions(test_df))"
+    "pc_b_preds = pd.concat(rbd_pc_b.make_predictions(test_df))\n",
+    "pc_a_copy_preds = pd.concat(rbd_pc_a_copy.make_predictions(test_df))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
+   "id": "687a9858-0317-4c67-888b-2fcca0c755d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert pc_a_preds.equals(pc_a_copy_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "27d51146-47c0-4ccd-9d8b-63b5432294ff",
    "metadata": {},
    "outputs": [],
