--- a/tests/test_bootstrap.ipynb
+++ b/tests/test_bootstrap.ipynb
@@ -95,7 +95,7 @@
     "\n",
     "# Now only use the first 30 elements to get rid of some mutations\n",
     "polyclonal_data2 = Polyclonal(\n",
-    "    data_to_fit=data_to_fit.head(30),\n",
+    "    data_to_fit=data_to_fit.head(20),\n",
     "    activity_wt_df=activity_wt_df,\n",
     "    site_escape_df=pd.DataFrame.from_records(\n",
     "        [(\"1\", 1, 1.0), (\"1\", 4, 0.0), (\"2\", 1, 0.0), (\"2\", 4, 2.0)],\n",
@@ -176,24 +176,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "3ce1356d-9c5d-4b83-85d1-c2c2cdd0b8fb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Do two different seeds generate different `mut_bootstrap_freq_dict()` objects?\n",
+    "# Do two different seeds generate different objects?\n",
     "pc2 = PolyclonalCollection(\n",
     "    root_polyclonal=polyclonal_data,\n",
     "    n_bootstrap_samples=n_samps,\n",
     "    n_threads=n_threads,\n",
-    "    seed=1,\n",
-    ")\n",
-    "assert pc.mut_bootstrap_freq_dict != pc2.mut_bootstrap_freq_dict"
+    "    seed=10,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "781ad89f-9e61-4708-81d8-91fc89f2ed25",
    "metadata": {},
    "outputs": [],
@@ -218,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "c6185dc5-6d1a-4975-92b2-5cd7fd6c6b58",
    "metadata": {},
    "outputs": [],
@@ -233,23 +232,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "191a9185-f1d3-4271-8116-fd0a47b788ba",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Test `fit_models()` with kwargs -- shouldn't throw any errors\n",
     "pc_copy.fit_models(fit_site_level_first=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "18c2f672-bdd1-4a92-8e6a-c420c57f0d3d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pc_copy.harmonize_epitopes()"
    ]
   },
   {
@@ -341,6 +330,69 @@
     "# Ensure center summary stats are still probabilities\n",
     "assert agg_results.mean_predicted_prob_escape.between(0, 1).all()\n",
     "assert agg_results.median_predicted_prob_escape.between(0, 1).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b1b41bb6-7443-42ba-9e6e-dd701a2f1349",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_list_copy = pc_copy.make_predictions(variants_df=boot_df)\n",
+    "agg_results_copy = pc_copy.summarize_bootstraped_predictions(test_list_copy)\n",
+    "assert agg_results.equals(agg_results_copy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "99084510-3800-4e82-bd3a-862bc7d483cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    summary_mut_escape_dict_copy,\n",
+    "    summary_activity_wt_dict_copy,\n",
+    ") = pc_copy.summarize_bootstrapped_params()\n",
+    "assert summary_mut_escape_dict[\"mean\"].equals(summary_mut_escape_dict_copy[\"mean\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "8862a4d5-5e9b-4f09-be89-de5702805e18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test that different seeds result in differnt results\n",
+    "pc2.fit_models(fit_site_level_first=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7d9b5395-f683-415c-9661-31afc3c7b6b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_list_2 = pc2.make_predictions(variants_df=boot_df)\n",
+    "agg_results_2 = pc2.summarize_bootstraped_predictions(test_list_2)\n",
+    "(\n",
+    "    summary_mut_escape_dict_2,\n",
+    "    summary_activity_wt_dict_2,\n",
+    ") = pc2.summarize_bootstrapped_params()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8d98905e-fc1a-4f8c-8119-218a971ad293",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert not agg_results_2.equals(agg_results)\n",
+    "assert not summary_mut_escape_dict[\"mean\"].equals(summary_mut_escape_dict_2[\"mean\"])"
    ]
   }
  ],
