--- a/tests/test_rbd_bootstrap.ipynb
+++ b/tests/test_rbd_bootstrap.ipynb
@@ -174,55 +174,55 @@
      "output_type": "stream",
      "text": [
       "# First fitting site-level model.\n",
-      "# Starting optimization of 522 parameters at Thu Mar 10 08:49:25 2022.\n",
+      "# Starting optimization of 522 parameters at Thu Mar 10 16:09:29 2022.\n",
       "       step   time_sec       loss   fit_loss reg_escape  regspread\n",
-      "          0   0.050539     9144.4     9144.2    0.29701          0\n",
-      "        100     5.9702     1336.8     1333.2     3.5443          0\n",
-      "        200     11.747     1313.2     1308.8     4.3872          0\n",
-      "        300     17.976       1305     1299.8     5.1347          0\n",
-      "        400     23.684     1301.8     1296.2     5.6246          0\n",
-      "        500      29.48     1298.4     1292.5     5.8941          0\n",
-      "        600      35.17     1297.8     1291.7     6.0372          0\n",
-      "        700     41.239     1296.9     1290.4     6.5236          0\n",
-      "        800     47.064     1296.4     1289.8     6.6654          0\n",
-      "        900     52.893     1296.2     1289.4      6.759          0\n",
-      "       1000     58.731     1295.7     1288.8     6.8687          0\n",
-      "       1100     64.708     1295.4     1288.6      6.848          0\n",
-      "       1200     70.525     1295.1     1288.2     6.8787          0\n",
-      "       1300     76.409       1295     1288.1     6.8933          0\n",
-      "       1327     77.902       1295     1288.1     6.9079          0\n",
-      "# Successfully finished at Thu Mar 10 08:50:43 2022.\n",
-      "# Starting optimization of 5799 parameters at Thu Mar 10 08:50:43 2022.\n",
+      "          0   0.059647     9144.4     9144.2    0.29701          0\n",
+      "        100     6.8575     1336.8     1333.2     3.5443          0\n",
+      "        200     13.214     1313.2     1308.8     4.3872          0\n",
+      "        300     19.418       1305     1299.8     5.1347          0\n",
+      "        400     25.149     1301.8     1296.2     5.6246          0\n",
+      "        500     31.024     1298.4     1292.5     5.8941          0\n",
+      "        600     36.845     1297.8     1291.7     6.0372          0\n",
+      "        700     43.025     1296.9     1290.4     6.5236          0\n",
+      "        800     48.887     1296.4     1289.8     6.6654          0\n",
+      "        900     54.739     1296.2     1289.4      6.759          0\n",
+      "       1000     60.581     1295.7     1288.8     6.8687          0\n",
+      "       1100     66.655     1295.4     1288.6      6.848          0\n",
+      "       1200     72.483     1295.1     1288.2     6.8787          0\n",
+      "       1300     78.424       1295     1288.1     6.8933          0\n",
+      "       1327     79.909       1295     1288.1     6.9079          0\n",
+      "# Successfully finished at Thu Mar 10 16:10:49 2022.\n",
+      "# Starting optimization of 5799 parameters at Thu Mar 10 16:10:49 2022.\n",
       "       step   time_sec       loss   fit_loss reg_escape  regspread\n",
-      "          0   0.068505     1638.9     1552.6     86.331 2.0049e-29\n",
-      "        100     7.3493      840.1     742.48     86.054     11.569\n",
-      "        200     15.012        823      722.8     84.969     15.233\n",
-      "        300     22.432     814.93     715.01     81.327     18.598\n",
-      "        400     29.684     808.61     713.03     77.361     18.217\n",
-      "        500     36.933     797.44     707.43     71.416     18.591\n",
-      "        600     44.216      787.5      704.1     63.484     19.917\n",
-      "        700     51.607     779.41     701.56     57.656     20.192\n",
-      "        800     58.876     773.29     700.96     52.552     19.778\n",
-      "        900     65.958     767.01     698.89     47.897     20.223\n",
-      "       1000     72.723     763.29     697.22     45.818     20.245\n",
-      "       1100     80.085     757.65      693.1     43.495     21.052\n",
-      "       1200     87.644     752.35     687.89     42.401     22.058\n",
-      "       1300     95.045     746.77     680.45     42.599     23.722\n",
-      "       1400     102.52     741.09     673.02     43.167      24.91\n",
-      "       1500      109.8     735.39      664.1     44.328      26.96\n",
-      "       1600     117.24     728.43        654     45.503     28.927\n",
-      "       1700     124.39     723.22     645.61     46.896     30.714\n",
-      "       1800     131.63     713.76     632.49     48.549     32.715\n",
-      "       1900     138.73     696.67     611.33     50.353     34.985\n",
-      "       2000     145.87     681.55     596.14     50.859     34.555\n",
-      "       2100     153.09     670.83     583.91     51.702     35.218\n",
-      "       2200     160.29     666.81     579.38     52.268     35.168\n",
-      "       2300     167.28      665.7     578.31     52.536     34.853\n",
-      "       2400     174.65     665.33     577.91     52.736     34.683\n",
-      "       2500     181.65     665.16     577.76     52.881     34.528\n",
-      "       2600     188.63     665.08     577.66      52.95     34.467\n",
-      "       2634     191.16     665.06     577.64     52.976     34.452\n",
-      "# Successfully finished at Thu Mar 10 08:53:54 2022.\n"
+      "          0   0.067865     1638.9     1552.6     86.331 2.0049e-29\n",
+      "        100     7.3919      840.1     742.48     86.054     11.569\n",
+      "        200     15.002        823      722.8     84.969     15.233\n",
+      "        300     22.166     814.93     715.01     81.327     18.598\n",
+      "        400     29.479     808.61     713.03     77.361     18.217\n",
+      "        500     36.824     797.44     707.43     71.416     18.591\n",
+      "        600      44.15      787.5      704.1     63.484     19.917\n",
+      "        700      51.61     779.41     701.56     57.656     20.192\n",
+      "        800     58.918     773.29     700.96     52.552     19.778\n",
+      "        900     65.999     767.01     698.89     47.897     20.223\n",
+      "       1000     72.806     763.29     697.22     45.818     20.245\n",
+      "       1100     80.165     757.65      693.1     43.495     21.052\n",
+      "       1200     87.648     752.35     687.89     42.401     22.058\n",
+      "       1300     95.004     746.77     680.45     42.599     23.722\n",
+      "       1400     102.47     741.09     673.02     43.167      24.91\n",
+      "       1500     109.71     735.39      664.1     44.328      26.96\n",
+      "       1600     117.13     728.43        654     45.503     28.927\n",
+      "       1700     124.24     723.22     645.61     46.896     30.714\n",
+      "       1800     131.45     713.76     632.49     48.549     32.715\n",
+      "       1900     138.59     696.67     611.33     50.353     34.985\n",
+      "       2000     145.73     681.55     596.14     50.859     34.555\n",
+      "       2100     152.99     670.83     583.91     51.702     35.218\n",
+      "       2200     160.13     666.81     579.38     52.268     35.168\n",
+      "       2300     167.19      665.7     578.31     52.536     34.853\n",
+      "       2400     174.48     665.33     577.91     52.736     34.683\n",
+      "       2500     181.52     665.16     577.76     52.881     34.528\n",
+      "       2600     188.47     665.08     577.66      52.95     34.467\n",
+      "       2634     190.99     665.06     577.64     52.976     34.452\n",
+      "# Successfully finished at Thu Mar 10 16:14:00 2022.\n"
      ]
     }
    ],
@@ -236,7 +236,7 @@
    "id": "5f1f752f-8846-4fb5-8c75-3767024cf241",
    "metadata": {},
    "source": [
-    "## Create and fit two different `PolyclonalCollection` objects"
+    "## Create and fit different `PolyclonalCollection` objects"
    ]
   },
   {
@@ -247,7 +247,7 @@
    "outputs": [],
    "source": [
     "# Now create two different polyclonal collection objects\n",
-    "n_samps = 5\n",
+    "n_samps = 3\n",
     "n_threads = 32\n",
     "rbd_pc_a = PolyclonalCollection(\n",
     "    root_polyclonal=rbd_poly,\n",
@@ -259,6 +259,18 @@
     "    root_polyclonal=rbd_poly,\n",
     "    n_bootstrap_samples=n_samps,\n",
     "    n_threads=n_threads,\n",
+    "    seed=10,\n",
+    ")\n",
+    "rbd_pc_a_copy = PolyclonalCollection(\n",
+    "    root_polyclonal=rbd_poly,\n",
+    "    n_bootstrap_samples=n_samps,\n",
+    "    n_threads=n_threads,\n",
+    "    seed=0,\n",
+    ")\n",
+    "rbd_pc_b_copy = PolyclonalCollection(\n",
+    "    root_polyclonal=rbd_poly,\n",
+    "    n_bootstrap_samples=n_samps,\n",
+    "    n_threads=n_threads * 2,\n",
     "    seed=10,\n",
     ")"
    ]
@@ -275,27 +287,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7e2577da-965f-43af-b68e-05e67c91f64d",
-   "metadata": {},
-   "source": [
-    "## Tests to see if seed is respected (different results)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "3dc642de-0a87-4303-9f0b-de5364da1534",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rbd_pc_a_copy = PolyclonalCollection(\n",
-    "    root_polyclonal=rbd_poly,\n",
-    "    n_bootstrap_samples=n_samps,\n",
-    "    n_threads=n_threads,\n",
-    "    seed=0,\n",
-    ")\n",
-    "rbd_pc_a_copy.fit_models(fit_site_level_first=False)"
+    "rbd_pc_a_copy.fit_models(fit_site_level_first=False)\n",
+    "rbd_pc_b_copy.fit_models(fit_site_level_first=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e2577da-965f-43af-b68e-05e67c91f64d",
+   "metadata": {},
+   "source": [
+    "## Tests to see if seed is respected (different results)"
    ]
   },
   {
@@ -326,7 +333,11 @@
     "(\n",
     "    rbd_pc_a_copy_escape_dict,\n",
     "    rbd_pc_a_copy_activity_wt_dict,\n",
-    ") = rbd_pc_a_copy.summarize_bootstrapped_params()"
+    ") = rbd_pc_a_copy.summarize_bootstrapped_params()\n",
+    "(\n",
+    "    rbd_pc_b_copy_escape_dict,\n",
+    "    rbd_pc_b_copy_activity_wt_dict,\n",
+    ") = rbd_pc_b_copy.summarize_bootstrapped_params()"
    ]
   },
   {
@@ -359,6 +370,25 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "3d667494-47d9-4cb7-9913-30d256dbedb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test to see if inferred params are the same with same seed and different thread count\n",
+    "assert rbd_pc_b_escape_dict[\"mean\"].equals(rbd_pc_b_copy_escape_dict[\"mean\"])\n",
+    "assert rbd_pc_b_escape_dict[\"median\"].equals(rbd_pc_b_copy_escape_dict[\"median\"])\n",
+    "assert rbd_pc_b_escape_dict[\"std\"].equals(rbd_pc_b_copy_escape_dict[\"std\"])\n",
+    "\n",
+    "assert rbd_pc_b_activity_wt_dict[\"mean\"].equals(rbd_pc_b_copy_activity_wt_dict[\"mean\"])\n",
+    "assert rbd_pc_b_activity_wt_dict[\"median\"].equals(\n",
+    "    rbd_pc_b_copy_activity_wt_dict[\"median\"]\n",
+    ")\n",
+    "assert rbd_pc_b_activity_wt_dict[\"std\"].equals(rbd_pc_b_copy_activity_wt_dict[\"std\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "579172d6-1be5-4b31-9e22-66b886edebe2",
    "metadata": {},
    "outputs": [],
@@ -371,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "80424a67-9557-4335-ba3a-0de1337b2f0f",
    "metadata": {},
    "outputs": [],
@@ -385,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "a478c4e3-568e-4fe7-9768-c9762b1da9bb",
    "metadata": {},
    "outputs": [],
@@ -393,12 +423,13 @@
     "test_df = rbd_data.sample(n=200, random_state=0)\n",
     "pc_a_preds = pd.concat(rbd_pc_a.make_predictions(test_df))\n",
     "pc_b_preds = pd.concat(rbd_pc_b.make_predictions(test_df))\n",
-    "pc_a_copy_preds = pd.concat(rbd_pc_a_copy.make_predictions(test_df))"
+    "pc_a_copy_preds = pd.concat(rbd_pc_a_copy.make_predictions(test_df))\n",
+    "pc_b_copy_preds = pd.concat(rbd_pc_b_copy.make_predictions(test_df))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "687a9858-0317-4c67-888b-2fcca0c755d8",
    "metadata": {},
    "outputs": [],
@@ -408,12 +439,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "27d51146-47c0-4ccd-9d8b-63b5432294ff",
    "metadata": {},
    "outputs": [],
    "source": [
     "assert not pc_a_preds.equals(pc_b_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "27c46451-f768-4457-aa63-bd18bc217cba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test threads for reproducability\n",
+    "assert pc_b_preds.equals(pc_b_copy_preds)"
    ]
   }
  ],
