re-run fitting in library_size

--- a/notebooks/library_size.ipynb
+++ b/notebooks/library_size.ipynb
@@ -225,12 +225,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model with 1000 variants was already fit.\n",
-      "Model with 2500 variants was already fit.\n",
-      "Model with 5000 variants was already fit.\n",
-      "Model with 10000 variants was already fit.\n",
-      "Model with 20000 variants was already fit.\n",
-      "Model with 30000 variants was already fit.\n"
+      "Model with 1000 variants fit and saved.\n",
+      "Model with 2500 variants fit and saved.\n",
+      "Model with 5000 variants fit and saved.\n",
+      "Model with 10000 variants fit and saved.\n",
+      "Model with 20000 variants fit and saved.\n",
+      "Model with 30000 variants fit and saved.\n"
      ]
     }
    ],
@@ -345,12 +345,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-ca9520cc511346d5977d27733300509b\"></div>\n",
+       "<div id=\"altair-viz-1b95b5398d98443286421dd09131d170\"></div>\n",
        "<script type=\"text/javascript\">\n",
+       "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-ca9520cc511346d5977d27733300509b\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-ca9520cc511346d5977d27733300509b\");\n",
+       "    if (outputDiv.id !== \"altair-viz-1b95b5398d98443286421dd09131d170\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-1b95b5398d98443286421dd09131d170\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -359,15 +360,21 @@
        "      \"vega-embed\": \"https://cdn.jsdelivr.net/npm//vega-embed@6?noext\",\n",
        "    };\n",
        "\n",
-       "    function loadScript(lib) {\n",
-       "      return new Promise(function(resolve, reject) {\n",
-       "        var s = document.createElement('script');\n",
-       "        s.src = paths[lib];\n",
-       "        s.async = true;\n",
-       "        s.onload = () => resolve(paths[lib]);\n",
-       "        s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n",
-       "        document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
-       "      });\n",
+       "    function maybeLoadScript(lib, version) {\n",
+       "      var key = `${lib.replace(\"-\", \"\")}_version`;\n",
+       "      return (VEGA_DEBUG[key] == version) ?\n",
+       "        Promise.resolve(paths[lib]) :\n",
+       "        new Promise(function(resolve, reject) {\n",
+       "          var s = document.createElement('script');\n",
+       "          document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
+       "          s.async = true;\n",
+       "          s.onload = () => {\n",
+       "            VEGA_DEBUG[key] = version;\n",
+       "            return resolve(paths[lib]);\n",
+       "          };\n",
+       "          s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n",
+       "          s.src = paths[lib];\n",
+       "        });\n",
        "    }\n",
        "\n",
        "    function showError(err) {\n",
@@ -383,16 +390,14 @@
        "    if(typeof define === \"function\" && define.amd) {\n",
        "      requirejs.config({paths});\n",
        "      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
-       "    } else if (typeof vegaEmbed === \"function\") {\n",
-       "      displayChart(vegaEmbed);\n",
        "    } else {\n",
-       "      loadScript(\"vega\")\n",
-       "        .then(() => loadScript(\"vega-lite\"))\n",
-       "        .then(() => loadScript(\"vega-embed\"))\n",
+       "      maybeLoadScript(\"vega\", \"5\")\n",
+       "        .then(() => maybeLoadScript(\"vega-lite\", \"4.17.0\"))\n",
+       "        .then(() => maybeLoadScript(\"vega-embed\", \"6\"))\n",
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"layer\": [{\"mark\": \"point\", \"encoding\": {\"color\": {\"field\": \"epitope\", \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}, {\"field\": \"epitope\", \"type\": \"nominal\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}}, {\"mark\": {\"type\": \"line\", \"size\": 2.5}, \"encoding\": {\"color\": {\"field\": \"epitope\", \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}, {\"field\": \"epitope\", \"type\": \"nominal\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}, \"title\": \"inferred vs. true mutation escape values\", \"transform\": [{\"loess\": \"correlation (R^2)\", \"on\": \"num_variants\", \"groupby\": [\"epitope\"]}]}], \"data\": {\"name\": \"data-407f08896ab392fd6cba7b78f38b9ca4\"}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\", \"datasets\": {\"data-407f08896ab392fd6cba7b78f38b9ca4\": [{\"epitope\": \"class 1\", \"correlation (R^2)\": 0.0005833374527068625, \"num_variants\": \"1000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.3837377180727185, \"num_variants\": \"1000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.020187187339052344, \"num_variants\": \"1000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.007389692730778493, \"num_variants\": \"2500\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.5881293887025464, \"num_variants\": \"2500\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.3524713277073588, \"num_variants\": \"2500\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.0536765335409406, \"num_variants\": \"5000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.6560762409196355, \"num_variants\": \"5000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.45959541315107766, \"num_variants\": \"5000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.5749424016502525, \"num_variants\": \"10000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.8664789669908456, \"num_variants\": \"10000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.794815336011536, \"num_variants\": \"10000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.6887010319168394, \"num_variants\": \"20000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9331512149955108, \"num_variants\": \"20000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.876899149348737, \"num_variants\": \"20000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.7557697884639126, \"num_variants\": \"30000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9465601495554855, \"num_variants\": \"30000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.9021540366349036, \"num_variants\": \"30000\"}]}}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"layer\": [{\"mark\": \"point\", \"encoding\": {\"color\": {\"field\": \"epitope\", \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}, {\"field\": \"epitope\", \"type\": \"nominal\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}}, {\"mark\": {\"type\": \"line\", \"size\": 2.5}, \"encoding\": {\"color\": {\"field\": \"epitope\", \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}, {\"field\": \"epitope\", \"type\": \"nominal\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}, \"title\": \"inferred vs. true mutation escape values\", \"transform\": [{\"loess\": \"correlation (R^2)\", \"on\": \"num_variants\", \"groupby\": [\"epitope\"]}]}], \"data\": {\"name\": \"data-780d85c3e5856cf7f0298fc454ca52e3\"}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\", \"datasets\": {\"data-780d85c3e5856cf7f0298fc454ca52e3\": [{\"epitope\": \"class 1\", \"correlation (R^2)\": 0.00014902447366104142, \"num_variants\": \"1000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.39078598754101984, \"num_variants\": \"1000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.02090877019475958, \"num_variants\": \"1000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.005768465874189956, \"num_variants\": \"2500\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.5731572933502277, \"num_variants\": \"2500\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.35039115800467197, \"num_variants\": \"2500\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.06810277770362462, \"num_variants\": \"5000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.6722409355392467, \"num_variants\": \"5000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.49335096214532254, \"num_variants\": \"5000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.5711398662281895, \"num_variants\": \"10000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.8646225451974343, \"num_variants\": \"10000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.791415702698018, \"num_variants\": \"10000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.693282259624974, \"num_variants\": \"20000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9327993227244932, \"num_variants\": \"20000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.8789975332486836, \"num_variants\": \"20000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.7954208943251723, \"num_variants\": \"30000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9461536050659455, \"num_variants\": \"30000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.9025881818172772, \"num_variants\": \"30000\"}]}}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
@@ -497,12 +502,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-9edbcac7846046ab987530e3e1730d8a\"></div>\n",
+       "<div id=\"altair-viz-c76c4b014926441aa55972df412eb8e5\"></div>\n",
        "<script type=\"text/javascript\">\n",
+       "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-9edbcac7846046ab987530e3e1730d8a\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-9edbcac7846046ab987530e3e1730d8a\");\n",
+       "    if (outputDiv.id !== \"altair-viz-c76c4b014926441aa55972df412eb8e5\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-c76c4b014926441aa55972df412eb8e5\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -511,15 +517,21 @@
        "      \"vega-embed\": \"https://cdn.jsdelivr.net/npm//vega-embed@6?noext\",\n",
        "    };\n",
        "\n",
-       "    function loadScript(lib) {\n",
-       "      return new Promise(function(resolve, reject) {\n",
-       "        var s = document.createElement('script');\n",
-       "        s.src = paths[lib];\n",
-       "        s.async = true;\n",
-       "        s.onload = () => resolve(paths[lib]);\n",
-       "        s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n",
-       "        document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
-       "      });\n",
+       "    function maybeLoadScript(lib, version) {\n",
+       "      var key = `${lib.replace(\"-\", \"\")}_version`;\n",
+       "      return (VEGA_DEBUG[key] == version) ?\n",
+       "        Promise.resolve(paths[lib]) :\n",
+       "        new Promise(function(resolve, reject) {\n",
+       "          var s = document.createElement('script');\n",
+       "          document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
+       "          s.async = true;\n",
+       "          s.onload = () => {\n",
+       "            VEGA_DEBUG[key] = version;\n",
+       "            return resolve(paths[lib]);\n",
+       "          };\n",
+       "          s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n",
+       "          s.src = paths[lib];\n",
+       "        });\n",
        "    }\n",
        "\n",
        "    function showError(err) {\n",
@@ -535,16 +547,14 @@
        "    if(typeof define === \"function\" && define.amd) {\n",
        "      requirejs.config({paths});\n",
        "      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
-       "    } else if (typeof vegaEmbed === \"function\") {\n",
-       "      displayChart(vegaEmbed);\n",
        "    } else {\n",
-       "      loadScript(\"vega\")\n",
-       "        .then(() => loadScript(\"vega-lite\"))\n",
-       "        .then(() => loadScript(\"vega-embed\"))\n",
+       "      maybeLoadScript(\"vega\", \"5\")\n",
+       "        .then(() => maybeLoadScript(\"vega-lite\", \"4.17.0\"))\n",
+       "        .then(() => maybeLoadScript(\"vega-embed\", \"6\"))\n",
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"layer\": [{\"mark\": \"point\", \"encoding\": {\"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}}, {\"mark\": {\"type\": \"line\", \"size\": 2.5}, \"encoding\": {\"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}, \"title\": \"predicted vs. true IC90\", \"transform\": [{\"loess\": \"correlation (R^2)\", \"on\": \"num_variants\"}]}], \"data\": {\"name\": \"data-bcd52b4482d51a8b13f6229ba1f32728\"}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\", \"datasets\": {\"data-bcd52b4482d51a8b13f6229ba1f32728\": [{\"correlation (R^2)\": 0.8186109443522505, \"num_variants\": \"1000\"}, {\"correlation (R^2)\": 0.8968273492171873, \"num_variants\": \"2500\"}, {\"correlation (R^2)\": 0.9126594349752555, \"num_variants\": \"5000\"}, {\"correlation (R^2)\": 0.9740654089050067, \"num_variants\": \"10000\"}, {\"correlation (R^2)\": 0.9890548098168895, \"num_variants\": \"20000\"}, {\"correlation (R^2)\": 0.9932350869440111, \"num_variants\": \"30000\"}]}}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"layer\": [{\"mark\": \"point\", \"encoding\": {\"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}}, {\"mark\": {\"type\": \"line\", \"size\": 2.5}, \"encoding\": {\"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}, \"title\": \"predicted vs. true IC90\", \"transform\": [{\"loess\": \"correlation (R^2)\", \"on\": \"num_variants\"}]}], \"data\": {\"name\": \"data-88a6e0b0e0bf32de07077563ed586aaa\"}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\", \"datasets\": {\"data-88a6e0b0e0bf32de07077563ed586aaa\": [{\"correlation (R^2)\": 0.8231314756728234, \"num_variants\": \"1000\"}, {\"correlation (R^2)\": 0.897091926211851, \"num_variants\": \"2500\"}, {\"correlation (R^2)\": 0.914869118484924, \"num_variants\": \"5000\"}, {\"correlation (R^2)\": 0.9735794511273995, \"num_variants\": \"10000\"}, {\"correlation (R^2)\": 0.9892356832964254, \"num_variants\": \"20000\"}, {\"correlation (R^2)\": 0.993305747398935, \"num_variants\": \"30000\"}]}}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
@@ -603,7 +613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
