re-run fitting on mutation_rate

--- a/notebooks/mutation_rate.ipynb
+++ b/notebooks/mutation_rate.ipynb
@@ -353,12 +353,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-86dfd2223af54fecb73c319319bb405f\"></div>\n",
+       "<div id=\"altair-viz-70b4b7f2749943d49cfd15bc95e59978\"></div>\n",
        "<script type=\"text/javascript\">\n",
+       "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-86dfd2223af54fecb73c319319bb405f\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-86dfd2223af54fecb73c319319bb405f\");\n",
+       "    if (outputDiv.id !== \"altair-viz-70b4b7f2749943d49cfd15bc95e59978\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-70b4b7f2749943d49cfd15bc95e59978\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -367,15 +368,21 @@
        "      \"vega-embed\": \"https://cdn.jsdelivr.net/npm//vega-embed@6?noext\",\n",
        "    };\n",
        "\n",
-       "    function loadScript(lib) {\n",
-       "      return new Promise(function(resolve, reject) {\n",
-       "        var s = document.createElement('script');\n",
-       "        s.src = paths[lib];\n",
-       "        s.async = true;\n",
-       "        s.onload = () => resolve(paths[lib]);\n",
-       "        s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n",
-       "        document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
-       "      });\n",
+       "    function maybeLoadScript(lib, version) {\n",
+       "      var key = `${lib.replace(\"-\", \"\")}_version`;\n",
+       "      return (VEGA_DEBUG[key] == version) ?\n",
+       "        Promise.resolve(paths[lib]) :\n",
+       "        new Promise(function(resolve, reject) {\n",
+       "          var s = document.createElement('script');\n",
+       "          document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
+       "          s.async = true;\n",
+       "          s.onload = () => {\n",
+       "            VEGA_DEBUG[key] = version;\n",
+       "            return resolve(paths[lib]);\n",
+       "          };\n",
+       "          s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n",
+       "          s.src = paths[lib];\n",
+       "        });\n",
        "    }\n",
        "\n",
        "    function showError(err) {\n",
@@ -391,16 +398,14 @@
        "    if(typeof define === \"function\" && define.amd) {\n",
        "      requirejs.config({paths});\n",
        "      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
-       "    } else if (typeof vegaEmbed === \"function\") {\n",
-       "      displayChart(vegaEmbed);\n",
        "    } else {\n",
-       "      loadScript(\"vega\")\n",
-       "        .then(() => loadScript(\"vega-lite\"))\n",
-       "        .then(() => loadScript(\"vega-embed\"))\n",
+       "      maybeLoadScript(\"vega\", \"5\")\n",
+       "        .then(() => maybeLoadScript(\"vega-lite\", \"4.17.0\"))\n",
+       "        .then(() => maybeLoadScript(\"vega-embed\", \"6\"))\n",
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-1232fa1026a5a8be78b2df72bd70ede2\"}, \"mark\": {\"type\": \"circle\", \"size\": 125}, \"encoding\": {\"color\": {\"field\": \"epitope\", \"legend\": null, \"type\": \"nominal\"}, \"column\": {\"field\": \"epitope\", \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"mutation_rate\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"mutation_rate\", \"sort\": {\"field\": \"x\", \"order\": \"descending\"}, \"type\": \"ordinal\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}, \"height\": 200, \"title\": \"inferred vs. true mutation escape values\", \"width\": 200, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\", \"datasets\": {\"data-1232fa1026a5a8be78b2df72bd70ede2\": [{\"epitope\": \"class 1\", \"correlation (R^2)\": 0.016373875223837507, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.7344986769776277, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.42753030589721297, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.6600938815680705, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.915062544485749, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.8625873717466266, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.7793980679238988, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9466799369332064, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.9019222075286286, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.7915293948320059, \"mutation_rate\": \"avg4muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9396145102752896, \"mutation_rate\": \"avg4muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.9201984463289355, \"mutation_rate\": \"avg4muts\"}]}}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-2555fa9df6f7d7be339497e2c7c5928c\"}, \"mark\": {\"type\": \"circle\", \"size\": 125}, \"encoding\": {\"color\": {\"field\": \"epitope\", \"legend\": null, \"type\": \"nominal\"}, \"column\": {\"field\": \"epitope\", \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"mutation_rate\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"mutation_rate\", \"sort\": {\"field\": \"x\", \"order\": \"descending\"}, \"type\": \"ordinal\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}, \"height\": 200, \"title\": \"inferred vs. true mutation escape values\", \"width\": 200, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\", \"datasets\": {\"data-2555fa9df6f7d7be339497e2c7c5928c\": [{\"epitope\": \"class 1\", \"correlation (R^2)\": 0.015430507003983296, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.7310292780457298, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.4434374408442581, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.6652956779460807, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.914339449754478, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.86246127371308, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.7817413017718214, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9461688311931766, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.9015842692046124, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.7886963171748558, \"mutation_rate\": \"avg4muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9408696899527026, \"mutation_rate\": \"avg4muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.919382326980428, \"mutation_rate\": \"avg4muts\"}]}}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
@@ -454,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
