--- a/notebooks/fit_RBD.ipynb
+++ b/notebooks/fit_RBD.ipynb
@@ -947,7 +947,12 @@
     "display(corr.round(2))\n",
     "\n",
     "# for testing since we nbval ignore cell output\n",
-    "assert numpy.allclose(corr[\"correlation (R^2)\"], numpy.array([0.67, 0.91, 0.86]), atol=0.02) == True\n",
+    "assert (\n",
+    "    numpy.allclose(\n",
+    "        corr[\"correlation (R^2)\"], numpy.array([0.67, 0.91, 0.86]), atol=0.02\n",
+    "    )\n",
+    "    == True\n",
+    ")\n",
     "\n",
     "corr_chart = (\n",
     "    alt.Chart(mut_escape_pred)\n",
