black format concentration_set

--- a/notebooks/concentration_set.ipynb
+++ b/notebooks/concentration_set.ipynb
@@ -457,7 +457,8 @@
     "        [\n",
     "            all_corrs,\n",
     "            corr.assign(\n",
-    "                icxx_set=[' '.join([f\"IC{wt_data_icxx[c]}\" for c in s])] * len(corr.index)\n",
+    "                icxx_set=[\" \".join([f\"IC{wt_data_icxx[c]}\" for c in s])]\n",
+    "                * len(corr.index)\n",
     "            ),\n",
     "        ]\n",
     "    )"
@@ -809,7 +810,8 @@
     "        [\n",
     "            all_corrs,\n",
     "            corr.assign(\n",
-    "                icxx_set=[', '.join([f\"IC{wt_data_icxx[c]}\" for c in s])] * len(corr.index)\n",
+    "                icxx_set=[\", \".join([f\"IC{wt_data_icxx[c]}\" for c in s])]\n",
+    "                * len(corr.index)\n",
     "            ),\n",
     "        ]\n",
     "    ).reset_index(drop=True)"
@@ -899,8 +901,11 @@
     "    tooltip=[\"icxx_set\", alt.Tooltip(\"correlation (R^2)\", format=\".3f\")],\n",
     "    color=alt.Color(\"epitope\", legend=None),\n",
     "    row=\"epitope:N\",\n",
-    ").properties(width=375, height=200, title=\"inferred vs. true mutation escape values\"\n",
-    ").configure_axis(labelLimit=300)"
+    ").properties(\n",
+    "    width=375, height=200, title=\"inferred vs. true mutation escape values\"\n",
+    ").configure_axis(\n",
+    "    labelLimit=300\n",
+    ")"
    ]
   },
   {
